--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
+    "chroma-js": "^2.0.4",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
