--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "chroma-js": "^2.0.4",
+    "emoji-mart": "^2.11.1",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
