--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -9,8 +9,10 @@
     "emoji-mart": "^2.11.1",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
+    "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
