--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "chroma-js": "^2.0.4",
     "emoji-mart": "^2.11.1",
+    "random-words": "^1.1.0",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-color": "^2.17.3",
