--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "chroma-js": "^2.0.4",
+    "color-namer": "^1.3.0",
     "emoji-mart": "^2.11.1",
     "random-words": "^1.1.0",
     "rc-slider": "^8.6.13",
