--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -2,6 +2,7 @@
   "name": "s24-colors-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s24-colors-app/",
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
