--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -2,7 +2,7 @@
   "name": "s24-colors-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s24-colors-app/",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s24-colors-app",
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
@@ -25,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "mv build ../docs/"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
