--- a/s24-colors-app/package.json
+++ b/s24-colors-app/package.json
@@ -9,6 +9,7 @@
     "chroma-js": "^2.0.4",
     "color-namer": "^1.3.0",
     "emoji-mart": "^2.11.1",
+    "gh-pages": "^2.0.1",
     "random-words": "^1.1.0",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s24-colors-app"
   },
   "eslintConfig": {
     "extends": "react-app"
