--- a/s24-colors-app/public/manifest.json
+++ b/s24-colors-app/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Smart Palette Manager",
+  "name": "Smart Palette Manager",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
