--- a/s33-login_page/package.json
+++ b/s33-login_page/package.json
@@ -1,11 +1,13 @@
 {
   "name": "s33-login_page",
   "version": "0.1.0",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s33-login_page",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "emoji-mart": "^2.11.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s33-login_page"
   },
   "eslintConfig": {
     "extends": "react-app"
