--- a/s19-dad-jokes/package.json
+++ b/s19-dad-jokes/package.json
@@ -1,10 +1,12 @@
 {
   "name": "s19-dad-jokes",
   "version": "0.1.0",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s19-dad-jokes",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "emoji-mart": "^2.11.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s19-dad-jokes"
   },
   "eslintConfig": {
     "extends": "react-app"
