--- a/s18-deck-of-cards/package.json
+++ b/s18-deck-of-cards/package.json
@@ -1,9 +1,11 @@
 {
   "name": "s18-deck-of-cards",
   "version": "0.1.0",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s18-deck-of-cards",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -12,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s18-deck-of-cards"
   },
   "eslintConfig": {
     "extends": "react-app"
