--- a/s18-deck-of-cards/public/manifest.json
+++ b/s18-deck-of-cards/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Card Dealer",
+  "name": "Card Dealer with deckofcardsapi.com",
   "icons": [
     {
       "src": "favicon.ico",
