--- a/s16-yahtzee/package.json
+++ b/s16-yahtzee/package.json
@@ -1,8 +1,10 @@
 {
   "name": "yahtzee",
   "version": "0.1.0",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s16-yahtzee",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s16-yahtzee"
   },
   "devDependencies": {
     "enzyme": "^3.8.0",
