--- a/s16-yahtzee/public/manifest.json
+++ b/s16-yahtzee/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Yahtzee!",
+  "name": "Game of Yahtzee!",
   "icons": [
     {
       "src": "favicon.ico",
