--- a/s12-lights-out/package.json
+++ b/s12-lights-out/package.json
@@ -1,8 +1,10 @@
 {
   "name": "react-lights-out",
   "version": "0.1.0",
+  "homepage": "https://juanirache.github.io/modern-react-bootcamp-exercises/s12-lights-out",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -e s12-lights-out"
   },
   "eslintConfig": {
     "extends": "react-app"
