--- a/s12-lights-out/public/manifest.json
+++ b/s12-lights-out/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Lights Out",
+  "name": "Lights Out game",
   "icons": [
     {
       "src": "favicon.ico",
