--- a/s16-yahtzee/package.json
+++ b/s16-yahtzee/package.json
@@ -7,7 +7,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
