--- a/s12-lights-out/package.json
+++ b/s12-lights-out/package.json
@@ -7,7 +7,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
